# MultiKernelBOSS

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  generate_tpch_data.sh
BOSS/: CMakeLists.txt
BOSS/Server/: Server.rkt
BOSS/Source/: Algorithm.hpp  BOSS.cpp  BOSS.hpp  BootstrapEngine.hpp  Engine.hpp  Expression.hpp  ExpressionUtilities.hpp  Utilities.hpp
BOSS/Source/Shims/: BOSS.rkt
BOSS/Tests/: BOSSTests.cpp  CAPITests.cpp
BOSSArrayFireEngine/: CMakeLists.txt
BOSSArrayFireEngine/Source/: BOSSArrayFireEngine.cpp
BOSSArrowStorage/: CMakeLists.txt
BOSSArrowStorage/Source/: BOSSArrowStorageEngine.cpp  BOSSArrowStorageEngine.hpp
BOSSArrowStorage/Tests/: BOSSArrowStorageTests.cpp  nation.tbl  supplier.tbl
BOSSVeloxEngine/: CMakeLists.txt  Readme.org
BOSSVeloxEngine/Source/: BOSSCoreTmp.h  BOSSQueryBuilder.cpp  BOSSQueryBuilder.h  BOSSVeloxEngine.cpp  BOSSVeloxEngine.hpp  BossConnector.cpp  BossConnector.h  BossConnectorSplit.h  BridgeVelox.cpp  BridgeVelox.h
Benchmarks/: BOSSBenchmarks.cpp  DuckDB.hpp  ITTNotifySupport.hpp  MonetDB.hpp
Evaluation/: DynamicDispatch.cpp  SemiStaticDispatch.cpp
